--- a/404.html
+++ b/404.html
@@ -62,7 +62,7 @@
         <div class="output">
             <h1>ERROR</h1>
             <p>Oops! It seems like the page you are looking for doesn't exist.</p>
-            <p>Return to <a href="https://itsryanturbo.github.io/">home</a> or try a different command.</p>
+            <p>Return to <a href="https://ryancodes.xyz/">home</a> or try a different command.</p>
         </div>
     </div>
 </body>
