--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             welcomeMsg.className = "output";
             terminal.insertBefore(welcomeMsg, terminal.firstChild);
 
-            simulateTypeEffect("Welcome to ryancodes.xyz", welcomeMsg, () => {
+            simulateTypeEffect("Welcome to ryancodes.xyz | NEWS: IOS app testflight link coming soon", welcomeMsg, () => {
                 const helpMsg = document.createElement("div");
                 helpMsg.className = "output";
                 terminal.insertBefore(helpMsg, terminal.children[1]); // Ensure it's the second message
