--- a/index.html
+++ b/index.html
@@ -117,16 +117,16 @@
                         let response = "Command not found. Type 'HELP' to see the available commands.";
                         switch (command) {
                             case "WHOAMI":
-                                response = "Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript and Python";
+                                response = "code@ryancodes.xyz:~$ Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript and Python";
                                 break;
                             case "VERSION":
-                                response = "Running 1.3.0";
+                                response = "code@ryancodes.xyz:~$ Running 1.3.0";
                                 break;
                             case "CONTACT":
-                                response = "You can reach me at ryan@ryancodes.xyz | Instagram: ryancodes.xyz/ig";
+                                response = "code@ryancodes.xyz:~$ You can reach me at ryan@ryancodes.xyz | Instagram: ryancodes.xyz/ig";
                                 break;
                             case "HELP":
-                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, HELP.";
+                                response = "code@ryancodes.xyz:~$ Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, HELP.";
                                 break;
                             case "": 
                                 response = ">"   
@@ -194,7 +194,7 @@
                     const helpMsg = document.createElement("div");
                     helpMsg.className = "output";
                     terminal.insertBefore(helpMsg, terminal.children[1]); // Ensure it's the second message
-                    simulateTypeEffect("Welcome to Ryancodes.xyz | Type 'HELP' for a list of commands", helpMsg, () => {
+                    simulateTypeEffect("code@ryancodes.xyz:~$ Welcome to Ryancodes.xyz | Type 'HELP' for a list of commands", helpMsg, () => {
                         document.getElementById("commandInput").focus();
                     });
                 });
