--- a/index.html
+++ b/index.html
@@ -112,26 +112,25 @@
                     terminal.insertBefore(output, terminal.lastElementChild);
 
                     let response = "Command not found. Type 'HELP' to see the available commands.";
-                    switch (command) {
-                        case "WHOAMI":
-                            response = "Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript and Python";
-                            break;
-                        case "VERSION":
-                            response = "Running 1.3.0";
-                            break;
-                        case "CONTACT":
-                            response = "You can reach me at ryan@ryancodes.xyz | Instagram: ryancodes.xyz/ig";
-                            break;
-                        case "HELP":
-                            response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, HELP.";
-                            break;
-                        case "":
-                            response = ">";
+                    if (command !== "") {
+                        switch (command) {
+                            case "WHOAMI":
+                                response = "Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript and Python";
+                                break;
+                            case "VERSION":
+                                response = "Running 1.3.0";
+                                break;
+                            case "CONTACT":
+                                response = "You can reach me at ryan@ryancodes.xyz | Instagram: ryancodes.xyz/ig";
+                                break;
+                            case "HELP":
+                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, HELP.";
+                                break;
+                        }
+                        simulateTypeEffect(response, output, true, () => {
+                            terminal.scrollTop = terminal.scrollHeight;
+                        });
                     }
-
-                    simulateTypeEffect(response, output, true, () => {
-                        terminal.scrollTop = terminal.scrollHeight;
-                    });
                 }
 
                 commandInput.value = ""; // Clear the input
