--- a/apps.html
+++ b/apps.html
@@ -91,7 +91,7 @@
                 <img src="war-logo.jpg">
             </div>
             <div class="app-content">
-                <h2 class="app-title">App 1</h2>
+                <h2 class="app-title">WAR</h2>
                 <p class="app-description">A simple war car game app where you play against an AI.</p>
                 <a href="https://apps.apple.com/us/app/war-card-game/id6478232396" class="download-link" target="_blank">Download</a>
             </div>
