--- a/apps.html
+++ b/apps.html
@@ -15,7 +15,7 @@
             }
     
             .header {
-                background-color: #007bff;
+                background-color: #006400;
                 color: #ffffff;
                 padding: 20px;
                 text-align: center;
@@ -66,7 +66,7 @@
     
             .download-link {
                 display: inline-block;
-                background-color: #007bff;
+                background-color: #006400;
                 color: #ffffff;
                 padding: 10px 15px;
                 text-decoration: none;
