--- a/index.html
+++ b/index.html
@@ -123,8 +123,11 @@
                             case "CONTACT":
                                 response = "You can reach me at ryan@ryancodes.xyz | Instagram: ryancodes.xyz/ig";
                                 break;
+                            case "MY-APPS":
+                                response = "ryancodes.xyz/apps"
+                                break;
                             case "HELP":
-                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, HELP.";
+                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, MY-APPS, HELP.";
                                 break;
                         }
                         simulateTypeEffect(response, output, true, () => {
