--- a/apps.html
+++ b/apps.html
@@ -66,7 +66,7 @@
     
             .download-link {
                 display: inline-block;
-                background-color: #006400;
+                background-color: ##004400;
                 color: #ffffff;
                 padding: 10px 15px;
                 text-decoration: none;
