--- a/apps.html
+++ b/apps.html
@@ -75,7 +75,7 @@
             }
     
             .download-link:hover {
-                background-color: #0056b3;
+                background-color: #004400;
             }
         </style>
     </head>
