--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 response = "Running 1.3.0";
                                 break;
                             case "CONTACT":
-                                response = "You can reach me at ryan@ryancodes.xyz | Instagram: ryancodes.xyz/ig";
+                                response = "Go to ryancodes.xyz/support for help. | Instagram: ryancodes.xyz/ig";
                                 break;
                             case "MYAPPS":
                                 response = "ryancodes.xyz/apps"
