--- a/support.html
+++ b/support.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Contact Support</title>
+    <title>Support</title>
+    <link rel="icon" href="favicon3.ico" type="image/x-icon">
     <style>
         body, html {
             height: 100%;
