--- a/mobile.html
+++ b/mobile.html
@@ -1,79 +1,129 @@
 
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RyanCodes.xyz</title>
+    <title>Ryan Codes</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #e7ecef;
+            color: #333;
         }
 
         header {
-            background-color: #333;
-            color: #fff;
+            background-color: #000;
+            color: #00ff00;
             text-align: center;
-            padding: 1em 0;
+            padding: 2rem 0;
+            font-size: 24px;
+        }
+
+        .container {
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .alert-card {
+            background-color: #ffff;
+            color: #000;
+            padding: 15px;
+            border-radius: 8px;
+            margin: 20px;
+            text-align: center;
+            width: 80%;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        .alert-card button {
+            background-color: #000;
+            color: #fff;
+            border: none;
+            padding: 10px 20px;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .alert-card button:hover {
+            background-color: #00ff00;
         }
 
         section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
             background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin: 20px;
             border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            width: 80%;
+            text-align: center;
         }
 
         a {
-            color: #007BFF;
+            color: #14213d;
             text-decoration: none;
+            font-weight: bold;
         }
 
         a:hover {
-            text-decoration: underline;
+            color: #f77f00;
+        }
+
+        @media (max-width: 768px) {
+            header {
+                padding: 1.5rem 0;
+            }
+
+            .alert-card, section {
+                width: 90%;
+            }
         }
     </style>
 </head>
-
 <body>
 
     <header>
         <h1>Ryan Codes</h1>
-        <p>Coder</p>
+      <h2>MOBILE</h2>
+      
     </header>
 
-    <section>
-        <h2>WHOAMI</h2>
-        <p>Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript, and Python</p>
-    </section>
+    <div class="container">
+        <div class="alert-card">
+            <p>You are on the mobile website. Do you want to go to the full experience site?</p>
+            <a href="https://ryancodes.xyz" target="_blank"><button>Yes</button></a>
+        </div>
 
-    <section>
-        <h2>CONTACT</h2>
-        <p>For help, visit <a href="https://ryancodes.xyz/support" target="_blank">ryancodes.xyz/support</a><br>
-            Instagram: <a href="https://ryancodes.xyz/ig" target="_blank">ryancodes.xyz/ig</a></p>
-    </section>
+        <section>
+            <h2>WHOAMI</h2>
+            <p>Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript, and Python</p>
+        </section>
 
-    <section>
-        <h2>MY APPS</h2>
-        <p>Check out my iOS apps on <a href="https://ryancodes.xyz/apps" target="_blank">ryancodes.xyz/apps</a>.</p>
-    </section>
+        <section>
+            <h2>CONTACT</h2>
+            <p>For help, visit <a href="https://ryancodes.xyz/support" target="_blank">ryancodes.xyz/support</a>.<br>
+                Instagram: <a href="https://ryancodes.xyz/ig" target="_blank">ryancodes.xyz/ig</a></p>
+        </section>
 
-    <section>
-        <h2>PRIVACY POLICY</h2>
-        <p>Read our privacy policy at <a href="https://ryancodes.xyz/privacy-policy" target="_blank">ryancodes.xyz/privacy-policy</a>.</p>
-    </section>
+        <section>
+            <h2>MY APPS</h2>
+            <p>Check out my iOS apps on <a href="https://ryancodes.xyz/apps" target="_blank">ryancodes.xyz/apps</a>.</p>
+        </section>
 
-    <section>
-        <h2>VERSION</h2>
-        <p>1.4.0</p>
-    </section>
+        <section>
+            <h2>PRIVACY POLICY</h2>
+            <p>Read our privacy policy at <a href="https://ryancodes.xyz/privacy-policy" target="_blank">ryancodes.xyz/privacy-policy</a>.</p>
+        </section>
 
+        <section>
+            <h2>VERSION</h2>
+            <p>1.4.0</p>
+        </section>
+    </div>
 </body>
-
 </html>
