--- a/mobile.html
+++ b/mobile.html
@@ -71,7 +71,7 @@
         }
 
         a:hover {
-            color: #f77f00;
+            color: #00ff00;
         }
 
         @media (max-width: 768px) {
@@ -89,7 +89,6 @@
 
     <header>
         <h1>Ryan Codes</h1>
-      <h2>MOBILE</h2>
       
     </header>
 
