--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
     </style>
 </head>
 <body>
+    <script>
+        if(screen.width <= 699){
+            document.location = "https://ryancodes.xyz"
+        }
+
+    </script>
     <div class="terminal" id="terminal">
         <div class="matrix-effect" id="matrixEffect"></div>
         <div class="command-line">
