--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <body>
     <script>
         if(screen.width <= 699){
-            document.location = "https://ryancodes.xyz"
+            document.location = "https://ryancodes.xyz/mobile"
         }
 
     </script>
