--- a/mobile.html
+++ b/mobile.html
@@ -95,7 +95,7 @@
     <div class="container">
         <div class="alert-card">
             <p>You are on the mobile website. Do you want to go to the full experience site?</p>
-            <a href="https://ryancodes.xyz" target="_blank"><button>Yes</button></a>
+            <a href="https://ryancodes.xyz/stay" target="_blank"><button>Yes</button></a>
         </div>
 
         <section>
