--- a/mobile.html
+++ b/mobile.html
@@ -94,7 +94,7 @@
 
     <div class="container">
         <div class="alert-card">
-            <p>You are on the mobile website. Do you want to go to the desktop site (cooler but looks better on a computer)?</p>
+            <p>You are on the mobile website. Do you want to go to the desktop site (cooler but is glitchy on mobile)?</p>
             <a href="https://ryancodes.xyz/stay" target="_blank"><button>Yes</button></a>
         </div>
 
