--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             welcomeMsg.className = "output";
             terminal.insertBefore(welcomeMsg, terminal.firstChild);
 
-            simulateTypeEffect("LOADING RYANCODES.XYZ ████████████████████████████", welcomeMsg, false, () => {
+            simulateTypeEffect("████████████████████████████", welcomeMsg, false, () => {
                 const helpMsg = document.createElement("div");
                 helpMsg.className = "output";
                 terminal.insertBefore(helpMsg, terminal.children[1]);
