--- a/news.html
+++ b/news.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <title>RyanCodes News</title>
+    <link rel="icon" href="favicon4.ico" type="image/x-icon">
     <style>
         body {
             background-color: #f2f2f2;
