--- a/mobile.html
+++ b/mobile.html
@@ -115,6 +115,11 @@
         </section>
 
         <section>
+            <h2>NEWS</h2>
+            <p>Check out my news updates on <a href="https://ryancodes.xyz/news" target="_blank">ryancodes.xyz/news</a>.</p>
+        </section>
+        
+        <section>
             <h2>PRIVACY POLICY</h2>
             <p>Read our privacy policy at <a href="https://ryancodes.xyz/privacy-policy" target="_blank">ryancodes.xyz/privacy-policy</a>.</p>
         </section>
