--- a/index.html
+++ b/index.html
@@ -128,10 +128,13 @@
                                 response = "ryancodes.xyz/apps"
                                 break;
                             case "HELP":
-                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, MYAPPS, PRIVACY-POLICY, HELP.";
+                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, MYAPPS, NEWS, PRIVACY-POLICY, HELP.";
                                 break;
                             case "PRIVACY-POLICY":
                                 response = "ryancodes.xyz/privacy-policy";
+                                break;
+                            case "NEWS":
+                                response = "ryancodes.xyz/news";
                                 break;
                         }
                         simulateTypeEffect(response, output, true, () => {
