--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 response = "ryancodes.xyz/privacy-policy";
                                 break;
                             case "NEWS":
-                                response = "ryancodes.xyz/news";
+                                response = "Check out my news updates on ryancodes.xyz/news";
                                 break;
                         }
                         simulateTypeEffect(response, output, true, () => {
