--- a/news.html
+++ b/news.html
@@ -47,7 +47,7 @@
     <div class="news-container">
         <div class="news-square">
             <h2><a href="https://wwdc.com">WWDC24</a></h2>
-            <p>Invited to WWDC24 on 6/10-14. More info on 4/4.</p>
+            <p>No news at this time.</p>
         </div>
     </div>
 </body>
