--- a/news.html
+++ b/news.html
@@ -2,6 +2,8 @@
 <head>
     <title>Ryan Codes News</title>
     <link rel="icon" href="favicon4.ico" type="image/x-icon">
+    <script type="text/javascript" src="https://www.authpro.com/auth/ryanfrfr/?action=pp">
+</script>
     <style>
         body {
             background-color: #f2f2f2;
