--- a/news.html
+++ b/news.html
@@ -1,9 +1,6 @@
 <html>
 <head>
     <title>Ryan Codes News</title>
-    <link rel="icon" href="favicon4.ico" type="image/x-icon">
-    <script type="text/javascript" src="https://www.authpro.com/auth/ryanfrfr/?action=pp">
-</script>
     <style>
         body {
             background-color: #f2f2f2;
@@ -48,7 +45,7 @@
 <body>
     <div class="news-container">
         <div class="news-square">
-            <p>No news at this time.</p>
+            <h1>No news at this time.</h1>
         </div>
     </div>
 </body>
