--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>RyanCodes News</title>
+    <title>Ryan Codes login</title>
     <script src="https://www.authpro.com/js/auth.js"></script>
     <script>
       var ap=new AuthPro('ryanfrfr');
