--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                                 response = "Running 1.4.0";
                                 break;
                             case "CONTACT":
-                                response = "Go to ryancodes.xyz/support for help. | Instagram: ryancodes.xyz/ig";
+                                response = "Go to ryancodes.xyz/support for help.";
                                 break;
                             case "MYAPPS":
                                 response = "ryancodes.xyz/apps"
