--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     if (command !== "") {
                         switch (command) {
                             case "WHOAMI":
-                                response = "Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript and Python";
+                                response = "Ryan | Likes: Swift, HTML, CSS, Javascript and Python";
                                 break;
                             case "VERSION":
                                 response = "Running 1.4.0";
