--- a/stay.html
+++ b/stay.html
@@ -126,10 +126,7 @@
                     if (command !== "") {
                         switch (command) {
                             case "WHOAMI":
-                                response = "Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript and Python";
-                                break;
-                            case "VERSION":
-                                response = "Running 1.4.0";
+                                response = "Ryan | Likes: Swift, HTML, CSS, Javascript and Python";
                                 break;
                             case "CONTACT":
                                 response = "Go to ryancodes.xyz/support for help.";
