--- a/mobile.html
+++ b/mobile.html
@@ -100,7 +100,7 @@
 
         <section>
             <h2>WHOAMI</h2>
-            <p>Ryan Kiapour | Likes: Swift, HTML, CSS, Javascript, and Python</p>
+            <p>Ryan | Likes: Swift, HTML, CSS, Javascript, and Python</p>
         </section>
 
         <section>
@@ -123,10 +123,7 @@
             <h2>PRIVACY POLICY</h2>
             <p>Read our privacy policy at <a href="https://ryancodes.xyz/privacy-policy" target="_blank">ryancodes.xyz/privacy-policy</a>.</p>
         </section>
-
-        <section>
-            <h2>VERSION</h2>
-            <p>1.4.0</p>
+        
         </section>
     </div>
 </body>
