--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                 response = "ryancodes.xyz/apps"
                                 break;
                             case "HELP":
-                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, MYAPPS, NEWS, PRIVACY-POLICY, HELP.";
+                                response = "Available commands: WHOAMI, CONTACT, CLEAR, MATRIX, MYAPPS, NEWS, PRIVACY-POLICY, HELP.";
                                 break;
                             case "PRIVACY-POLICY":
                                 response = "ryancodes.xyz/privacy-policy";
