--- a/stay.html
+++ b/stay.html
@@ -125,13 +125,16 @@
                                 response = "ryancodes.xyz/apps"
                                 break;
                             case "HELP":
-                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, MYAPPS, NEWS, PRIVACY-POLICY, HELP.";
+                                response = "Available commands: WHOAMI, CONTACT, CLEAR, VERSION, MATRIX, IZTECH, MYAPPS, NEWS, PRIVACY-POLICY, HELP.";
                                 break;
                             case "PRIVACY-POLICY":
                                 response = "ryancodes.xyz/privacy-policy";
                                 break;
                             case "NEWS":
                                 response = "Check out my news updates on ryancodes.xyz/news";
+                                break;
+                            case "IZTECH"
+                                response = "Check out Iztech- my newly released tech support company- at iztech.xyz. At Iztech, we help with anything tech related, for FREE.
                                 break;
                         }
                         simulateTypeEffect(response, output, true, () => {
