--- a/news.html
+++ b/news.html
@@ -45,7 +45,8 @@
 <body>
     <div class="news-container">
         <div class="news-square">
-            <h1>No news at this time.</h1>
+            <h1>NEW APPS COMING SOON.</h1>
+            <h3>Expect more apps in /apps</h3>
         </div>
     </div>
 </body>
