--- a/stay.html
+++ b/stay.html
@@ -164,13 +164,10 @@
                                 response = "https://ryancodes.xyz/apps";
                                 break;
                             case "HELP":
-                                response = "Available commands: WHOAMI, CONTACT, CLEAR, MATRIX, IZTECH, MYAPPS, NEWS, PRIVACY-POLICY, HELP.";
+                                response = "Available commands: WHOAMI, CONTACT, CLEAR, MATRIX, IZTECH, MYAPPS, PRIVACY-POLICY, HELP.";
                                 break;
                             case "PRIVACY-POLICY":
                                 response = "https://ryancodes.xyz/privacy-policy";
-                                break;
-                            case "NEWS":
-                                response = "Check out my news updates on https://ryancodes.xyz/news";
                                 break;
                             case "IZTECH":
                                 response = "Check out Iztech- my newly released tech support company- at https://iztech.xyz. At Iztech, we help with anything tech related, for FREE.";
