--- a/beta.html
+++ b/beta.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ryan Codes</title>
+    <title>Ryancodes.xyz</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -110,7 +110,7 @@
 </head>
 <body>
     <div class="startup-screen" id="startupScreen">
-        <h1>Ryan Codes</h1>
+        <h1>Ryancodes.xyz</h1>
     </div>
 
     <div class="terminal" id="terminal">
