--- a/stay.html
+++ b/stay.html
@@ -191,7 +191,7 @@
                                 response = "https://ryancodes.xyz/apps";
                                 break;
                             case "HELP":
-                                response = "Available commands: WHOAMI, CONTACT, CLEAR, MATRIX, IZTECH, MYAPPS, PRIVACY-POLICY, HELP.";
+                                response = "Available commands: WHOAMI, CONTACT, CLEAR, IZTECH, MYAPPS, PRIVACY-POLICY, HELP.";
                                 break;
                             case "PRIVACY-POLICY":
                                 response = "https://ryancodes.xyz/privacy-policy";
