--- a/stay.html
+++ b/stay.html
@@ -199,6 +199,9 @@
                             case "IZTECH":
                                 response = "Check out Iztech- my newly released tech support company- at https://iztech.xyz. At Iztech, we help with anything tech related, for FREE.";
                                 break;
+                            case "Matrix":
+                                response = "Only on the classic site: ryancodes.xyz/classic";
+                                break;
                         }
                         simulateTypeEffect(response, output, true, () => {
                             terminal.scrollTop = terminal.scrollHeight;
