--- a/mobile.html
+++ b/mobile.html
@@ -105,7 +105,7 @@
 
         <section>
             <h2>CONTACT</h2>
-            <p>For help, visit <a href="https://ryancodes.xyz/support" target="_blank">ryancodes.xyz/support</a>.<br>
+            <p>To contact me, visit <a href="https://ryancodes.xyz/contact" target="_blank">ryancodes.xyz/support</a>.<br>
             
         </section>
 
