--- a/stay.html
+++ b/stay.html
@@ -212,7 +212,7 @@
                                 response = "Ryan | Likes: Swift, HTML, CSS, Javascript and Python";
                                 break;
                             case "CONTACT":
-                                response = "Go to https://ryancodes.xyz/support for help.";
+                                response = "Go to https://ryancodes.xyz/contact to get in touch.";
                                 break;
                             case "MYAPPS":
                                 response = "https://ryancodes.xyz/apps";
