--- a/contact.html
+++ b/contact.html
@@ -50,8 +50,8 @@
 <body>
     <div class="matrix" id="matrix"></div>
     <div class="content">
-        <h1>Contact Ryancodes Support</h1>
-        <p>Click the button below to send us an email:</p>
+        <h1>Contact Ryancodes</h1>
+        <p>Click the button below to send me an email:</p>
         <a href="mailto:contact@ryancodes.xyz?subject=Ryancodes-%20support" class="email-link">Send Email</a>
     </div>
     <script>
