--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Support</title>
-    <link rel="icon" href="favicon3.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body, html {
             height: 100%;
@@ -52,7 +52,7 @@
     <div class="content">
         <h1>Contact Ryancodes</h1>
         <p>Click the button below to send me an email:</p>
-        <a href="mailto:contact@ryancodes.xyz?subject=Ryancodes-%20support" class="email-link">Send Email</a>
+        <a href="mailto:contact@ryancodes.xyz?subject=Ryancodes" class="email-link">Send Email</a>
     </div>
     <script>
         const matrixElement = document.getElementById('matrix');
