--- a/classic.html
+++ b/classic.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Ryan Codes</title>
+    <title>Ryancodes.xyz Classic</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
