--- a/beta.html
+++ b/beta.html
@@ -131,6 +131,9 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
+            // Wait for the user interaction (click) to trigger fullscreen
+            document.body.addEventListener('click', requestFullscreen);
+
             setTimeout(() => {
                 document.getElementById("startupScreen").style.display = "none";
                 document.getElementById("terminal").style.display = "block";
@@ -144,9 +147,6 @@
                 simulateTypeEffect("Welcome to Ryancodes.xyz 2.0! | Type 'HELP' for a list of commands", helpMsg, true, () => {
                     document.getElementById("commandInput").focus();
                 });
-                
-                // Automatically request fullscreen after startup screen fades out
-                requestFullscreen();
             }, 4000); // Adjusted for the faster transition
         });
 
@@ -162,6 +162,9 @@
             } else if (docEl.msRequestFullscreen) { // IE/Edge
                 docEl.msRequestFullscreen();
             }
+
+            // Remove the event listener after fullscreen is triggered
+            document.body.removeEventListener('click', requestFullscreen);
         }
 
         function redirectIfPhone() {
