--- a/mobile.html
+++ b/mobile.html
@@ -100,7 +100,7 @@
 
         <section>
             <h2>WHOAMI</h2>
-            <p>Ryan | Likes: Swift, HTML, CSS, Javascript, and Python</p>
+            <p>Hi I'm Ryan, and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server ), how to run a tech support firm, and now how to make games using Godot. I'm sorry if I don't constantly update my game(s)- as I have to balance in my other hobbies- but I hope to comeback to game devolvement every once in a while You can reach me at ryan@ryancodes.xyz. for suggestions, support, or anything in between</p>
         </section>
 
         <section>
