--- a/mobile.html
+++ b/mobile.html
@@ -100,7 +100,7 @@
 
         <section>
             <h2>WHOAMI</h2>
-            <p>Hi I'm Ryan, and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server ), how to run a tech support firm, and now how to make games using Godot. I'm sorry if I don't constantly update my game(s)- as I have to balance in my other hobbies- but I hope to comeback to game devolvement every once in a while You can reach me at ryan@ryancodes.xyz. for suggestions, support, or anything in between</p>
+            <p>Hi I'm Ryan, and I Love coding. In my time coding, I have learned how to make apps, how to make websites, how to make artificial intelligence using Python, how to build cool projects with Arduinos, how to develop for a Minecraft server (Developed at 75,000+ member server), how to run a tech support firm, and finaly how to make games using Godot and Unreal Engine.</p>
         </section>
 
         <section>
@@ -112,6 +112,11 @@
         <section>
             <h2>MY APPS</h2>
             <p>Check out my iOS apps on <a href="https://ryancodes.xyz/apps" target="_blank">ryancodes.xyz/apps</a>.</p>
+        </section>
+
+        <section>
+            <h2>MY GAMES</h2>
+            <p>Check out my games on <a href="https://ryancodes.xyz/games" target="_blank">ryancodes.xyz/games</a>.</p>
         </section>
         
         <section>
