--- a/classic.html
+++ b/classic.html
@@ -244,7 +244,7 @@
                 const helpMsg = document.createElement("div");
                 helpMsg.className = "output";
                 terminal.insertBefore(helpMsg, terminal.children[1]);
-                simulateTypeEffect("Welcome to Ryancodes.xyz | Type 'HELP' for a list of commands", helpMsg, true, () => {
+                simulateTypeEffect("Welcome to Ryancodes.xyz | Type 'HELP' for a list of commands | PLEASE NOTE THIS WEBSITE IS NO LONGER UPDATED WITH MY LATEST LINKS. For my latest links, visit https://ryancodes.xyz", helpMsg, true, () => {
                     document.getElementById("commandInput").focus();
                 });
             });
