--- a/apps.html
+++ b/apps.html
@@ -89,7 +89,7 @@
         <!-- App 1 -->
         <div class="app-card">
             <div class="app-image">
-                <img src="warLogo.jpg">
+                <img src="warLogo.jpeg">
             </div>
             <div class="app-content">
                 <h2 class="app-title">WAR</h2>
