--- a/Internal-AI101.html
+++ b/Internal-AI101.html
@@ -9,7 +9,7 @@
   <style>
     :root {
       --primary-color: #333;
-      --background-color: #e0f7fa; /* New blue shade for the background */
+      --background-color: #e0f7fa; /* Blue shade for the background */
       --accent-color: #007BFF;
       --modal-bg: rgba(0, 0, 0, 0.9);
     }
@@ -94,8 +94,8 @@
     }
     
     .modal-content {
-      max-width: 90%;
-      max-height: 80%;
+      max-width: 80%;   /* Reduced max width */
+      max-height: 70%;  /* Reduced max height */
       border-radius: 8px;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
       animation: zoomIn 0.3s;
