--- a/Internal-AI101.html
+++ b/Internal-AI101.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Photo Gallery</title>
+  <title>AI101 App - Ryan Kiapour - INTERNAL</title>
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -146,7 +146,7 @@
 <body>
   <!-- Header -->
   <header>
-    <h1>Photo Gallery</h1>
+    <h1>AI101 App - Ryan Kiapour - INTERNAL</h1>
   </header>
   
   <!-- Photo Gallery -->
