--- a/Internal-AI101.html
+++ b/Internal-AI101.html
@@ -9,8 +9,8 @@
   <style>
     :root {
       --primary-color: #333;
-      /* Nice blue gradient background */
-      --background-color: linear-gradient(135deg, #74ebd5, #ACB6E5);
+      /* New blue gradient with deeper blue tones */
+      --background-color: linear-gradient(135deg, #1e3c72, #2a5298);
       --accent-color: #007BFF;
       --modal-bg: rgba(0, 0, 0, 0.9);
     }
